gcc/testsuite/rust/rustc/ui/parser/issues/issue-104620_dg.rs
#![feature(rustc_attrs)]

#![rustc_dummy=5z] // { dg-error "" "" { target *-*-* } }
fn main() {}

